src/pages/Account/account.scss
.account {
    .account__user_info {
        padding: 1.7em 4.5em;
        background: var(--bg-color--white);
        border-radius: 16px;
    }

    .user_info__default {
        width: 9.57em;
        filter: brightness(0) saturate(100%) invert(95%) sepia(5%) saturate(1606%) hue-rotate(155deg) brightness(97%) contrast(100%);
        // filter: invert(53%) sepia(92%) saturate(1346%) hue-rotate(149deg) brightness(91%) contrast(103%);
    }

    .account__user_input_photo {
        width: 100%;
        height: 100%;
        position: absolute;
        z-index: 2;
        opacity: 0;
    }

    .account__user_photo {
        width: 9.57em;
        height: 9.57em;
        border-radius: 50%;
        object-fit: cover;
    }

    .account__img_container {
        cursor: pointer;
        justify-items: center;
        border-radius: 8px;
        background-color: var(--bg-color--blue-alter);
    }

    .account__rss_logo {
        filter: invert(25%) sepia(99%) saturate(1626%) hue-rotate(179deg) brightness(99%) contrast(102%);
        padding: 6px;
        width: 44px;
        height: 44px;
        cursor: pointer
    }

    .account__user_points {
        background: var(--bg-color--blue-alter);
        border-radius: 16px;
    }

    .account__logout {
        border: solid 2px var(--border-color--white);
        background: transparent;
        margin-top: 0.46em;
    }

    .account__total_bold {
        font-weight: bold;
        font-size: 16px;
    }

    @media (max-width: 480px) {
        .account__user_info {
            padding: 1.7em 2.5em;
        }

        .account__user_photo {
            width: 6em;
            height: 6em;
        }
    }
}

